@@ -1,7 +1,9 @@
-Build 5-1 February 26, 2018
+Build 6 March 10, 2018
 ===========================
 
-1. Increase/Decrease state and Grow/Shrink buttons are automatically hidden
+1. Added new game: Polyomino
+
+2. Increase/Decrease state and Grow/Shrink buttons are automatically hidden
    when they can't be used.
 
 
